traces/bug_499.txt
src/Eigen/eigenvalue.cpp:510: error: DEAD_STORE
  The value written to &nbev (type long) is never used.
Showing all 1 steps of the trace


src/Eigen/eigenvalue.cpp:510:5: Write of unused value
508.       double tol=1e-6;
509.       long nconv=0;
510.       long nbev=1;
           ^
511.       bool sym=false;
512.       long ncv =0;  // the number of Arnoldi vectors generated
